# python-intermediate-inflammation

./: inflammation-analysis.py  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: main.yml
inflammation/: compute_data.py  models.py
tests/: test_models.py
