[tool.poetry]
name = "python-intermediate-inflammation"
version = "0.1.0"
description = "SWP tutorial, forked"
authors = ["Bela Vogler <62382262+Zatyrus@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
